<resources>
    <string name="app_name">Angelos</string>
    <string name="app_version">Angelos Ver.1.0</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="title_activity_register">Register</string>
    <string name="defaultId">ID</string>
    <string name="newPassword">New Password</string>
    <string name="renewPassword">Retype Password</string>
    <string name="submit">Submit</string>

    <string name="registerName">Full Name</string>
    <string name="registerPassword">New Password</string>
    <string name="registerPhoto">Take Photo</string>
    <string name="registerLogin">Login</string>
    <string name="registerSave">Save</string>

    <string name="title_activity_login">Login</string>
    <string name="loginPassword">Password</string>
    <string name="loginLogin">Login</string>
    <string name="loginCancel">Cancel</string>

    <string name="userID">UserID</string>
    <string name="siteID">SiteID</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="importScreen">Import Data</string>
    <string name="exportScreen">Export Data</string>
    <string name="visitScreen">Visit List</string>
    <string name="produkScreen">Product List</string>
    <string name="orderScreen">Order List</string>
    <string name="arScreen">AR Collection</string>
    <string name="reportScreen">Daily Report</string>
    <string name="passwordScreen">Change Password</string>
    <string name="photoScreen">Change Photo</string>
    <string name="logout">Logout</string>


    <string name="importButton">Import</string>
    <string name="importAllButton">Import All</string>

    <string name="copyRight">Copyright by \u0040 2017 - PowerGEN </string>
    <string name="title_activity_product2">Product2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_location">Show Location</string>
    <string name="customer_list">Customer List</string>
    <string name="exportButton">EXPORT</string>
    <string name="exportAllButton">EXPORT ALL</string>
</resources>
