<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.powerone.powerone.RegisterActivity"
    android:orientation="vertical"
    android:theme="@style/reloTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_person"
            android:id="@+id/imageView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/takePhoto"
            android:layout_marginTop="10dp"
            android:text="@string/registerPhoto"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonColor"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultId"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userID"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPassword"
            android:inputType="textPassword"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renewPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/retypePassword"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:background="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:text="@string/submit" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyRight"
            android:textColor="#FFF"/>

    </RelativeLayout>


</RelativeLayout>
