<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.project.powerone.powerone.ImportActivity"
    android:id="@+id/drawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/importScreen"
            android:textAllCaps="true"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/mainTitle"/>

        <LinearLayout
            android:layout_below="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textSize="18sp"
                        android:text="1. Customer List"/>

                    <TextView
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="Total"
                        android:id="@+id/totalCustomer"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/buttonColor"
                    android:textColor="@color/buttonTextColor"
                    android:text="@string/importButton"
                    android:id="@+id/buttonCustomer"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textSize="18sp"
                        android:text="2. Product List"/>

                    <TextView
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="Total"
                        android:id="@+id/totalProduct"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/importButton"
                    android:background="@color/buttonColor"
                    android:textColor="@color/buttonTextColor"
                    android:id="@+id/buttonProduct"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textSize="18sp"
                        android:text="3. Price List"/>

                    <TextView
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="Total"
                        android:id="@+id/totalPrice"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/importButton"
                    android:background="@color/buttonColor"
                    android:textColor="@color/buttonTextColor"
                    android:id="@+id/buttonPrice"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textSize="18sp"
                        android:text="4. AR Balance"/>

                    <TextView
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="Total"
                        android:id="@+id/totalAr"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/importButton"
                    android:background="@color/buttonColor"
                    android:textColor="@color/buttonTextColor"
                    android:id="@+id/buttonAr"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importAllButton"
            android:background="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:id="@+id/importButton"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp"
        app:menu="@menu/menu_main"
        android:layout_gravity="start"
        android:id="@+id/navigation">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
